[project]
name = "uber-earnings-automation"
version = "1.0.0"
description = "Automated Uber earnings data extraction and analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "playwright>=1.40.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "python-dateutil>=2.8.0",
    "tenacity>=8.2.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "keyring>=24.0.0",
    "schedule>=1.2.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']